chore: fixed alignment in header, overflowing user name

--- a/src/styles/Create.module.scss
+++ b/src/styles/Create.module.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    max-width: 1000px;
     input[type='text'],
     textarea {
         width: 100%;
